crates/python_parser/src/snapshots/python_parser__lexer__tests__string.snap
---
source: crates/python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        String {
            value: "double",
            kind: String,
            triple_quoted: false,
        },
        0..8,
    ),
    (
        String {
            value: "single",
            kind: String,
            triple_quoted: false,
        },
        9..17,
    ),
    (
        String {
            value: "can\\'t",
            kind: String,
            triple_quoted: false,
        },
        18..26,
    ),
    (
        String {
            value: "\\\\\\\"",
            kind: String,
            triple_quoted: false,
        },
        27..33,
    ),
    (
        String {
            value: "\\t\\r\\n",
            kind: String,
            triple_quoted: false,
        },
        34..42,
    ),
    (
        String {
            value: "\\g",
            kind: String,
            triple_quoted: false,
        },
        43..47,
    ),
    (
        String {
            value: "raw\\'",
            kind: RawString,
            triple_quoted: false,
        },
        48..56,
    ),
    (
        String {
            value: "\\420",
            kind: String,
            triple_quoted: false,
        },
        57..63,
    ),
    (
        String {
            value: "\\200\\0a",
            kind: String,
            triple_quoted: false,
        },
        64..73,
    ),
    (
        Newline,
        73..73,
    ),
]
