crates/python_parser/src/snapshots/python_parser__lexer__tests__string_continuation_with_mac_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: string_continuation_with_eol(MAC_EOL)
---
## Tokens
```
[
    (
        String(
            "abc\\\rdef",
        ),
        0..10,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Newline,
        10..10,
    ),
]
```
