crates/python_parser/src/snapshots/python_parser__lexer__tests__triple_quoted_mac_eol.snap
---
source: crates/python_parser/src/lexer.rs
expression: triple_quoted_eol(MAC_EOL)
---
## Tokens
```
[
    (
        String(
            "\r test string\r ",
        ),
        0..21,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING,
        ),
    ),
    (
        Newline,
        21..21,
    ),
]
```
